[package]
name = "subdl"
version = "0.1.0"
authors = ["hoping <baihaoping@gmail.com>"]
edition = "2018"

[dependencies]
serde_json = "1.0.38"
url = "1.7.2"
tokio = "0.1.15"
byteorder = "1.3.1"
hyper = "0.12.24"
text_io = "0.1.7"
zip = "0.5.0"
chrono = "0.4.6"
rar = "0.2.0"
rand = "0.6.5"
failure = "0.1.5"
unrar = "0.4.3"
serde = {version ="1.0.88", features = ["derive"]}
